--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
                </div>
                 
                <div class="enviar">
-               <button class="btn btn-primary" type="button" onclick="enviar()">Enviar.</button>
+               <button id="boton" class="btn btn-primary" type="button" onclick="enviar()" >Enviar.</button>
                </div>
 
           </main>
